# ECE-315

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
lab0/: lab0_part2.c  lab0_part3.c
lab0/full_hw_platform/: archive_project_summary.txt  full_hw_platform.xpr  vivado.jou
lab0/full_hw_platform/full_hw_platform.cache/ip/2024.2/0/b/0bb555528aa1bfbe/: 0bb555528aa1bfbe.xci  design_1_rst_ps7_0_50M_0.dcp  design_1_rst_ps7_0_50M_0_sim_netlist.v  design_1_rst_ps7_0_50M_0_sim_netlist.vhdl  design_1_rst_ps7_0_50M_0_stub.v  design_1_rst_ps7_0_50M_0_stub.vhdl
lab0/full_hw_platform/full_hw_platform.cache/ip/2024.2/2/9/296d23ca9c6e87a6/: 296d23ca9c6e87a6.xci  design_1_axi_gpio_0_0.dcp  design_1_axi_gpio_0_0_sim_netlist.v  design_1_axi_gpio_0_0_sim_netlist.vhdl  design_1_axi_gpio_0_0_stub.v  design_1_axi_gpio_0_0_stub.vhdl
lab0/full_hw_platform/full_hw_platform.cache/ip/2024.2/8/2/827d4dab09c3af03/: 827d4dab09c3af03.xci  design_1_axi_smc_0.dcp  design_1_axi_smc_0_sim_netlist.v  design_1_axi_smc_0_sim_netlist.vhdl  design_1_axi_smc_0_stub.v  design_1_axi_smc_0_stub.vhdl
lab0/full_hw_platform/full_hw_platform.cache/ip/2024.2/f/6/f6ec0767007fac2b/: design_1_axi_gpio_0_1.dcp  design_1_axi_gpio_0_1_sim_netlist.v  f6ec0767007fac2b.xci  (+3 more)
lab0/full_hw_platform/full_hw_platform.cache/wt/: synthesis.wdf  webtalk_pa.xml
lab0/full_hw_platform/full_hw_platform.gen/sources_1/bd/design_1/: design_1.bda  design_1.bmj  design_1.bxml  design_1_bmstub.v
lab0/full_hw_platform/full_hw_platform.gen/sources_1/bd/design_1/hdl/: design_1_wrapper.vhd
lab0/full_hw_platform/full_hw_platform.gen/sources_1/bd/design_1/hw_handoff/: design_1.hwh
lab0/full_hw_platform/full_hw_platform.gen/sources_1/bd/design_1/sim/: design_1.protoinst
lab0/full_hw_platform/full_hw_platform.gen/sources_1/bd/design_1/synth/: design_1.hwdef  design_1.vhd
lab0/full_hw_platform/full_hw_platform.srcs/sources_1/bd/design_1/: design_1.bd
lab0/full_hw_platform/full_hw_platform.srcs/sources_1/bd/design_1/ui/: bd_1f5defd0.ui
lab0/full_hw_platform/full_hw_platform.srcs/sources_1/imports/temp/: archive_project_summary.txt
lab0/full_hw_platform/full_hw_platform.srcs/utils_1/imports/synth_1/: design_1_wrapper.dcp
lab1/ece315_lab1/: archive_project_summary.txt
lab1/ece315_lab1/ece315_lab1.cache/wt/: synthesis.wdf
lab1/ece315_lab1/ece315_lab1.gen/sources_1/bd/lab1_hw/: lab1_hw.bda
lab1/ece315_lab1/ece315_lab1.srcs/constrs_1/new/: zybo_pmod_constraints.xdc
lab1/ece315_lab1/ece315_lab1.srcs/sources_1/imports/ece315_lab1/: archive_project_summary.txt
lab1/part1/: CMakeLists.txt  lab1_part1.c
lab1/part2/: CMakeLists.txt  lab1_part2.c  vRgbTask.c
lab1/part3/: CMakeLists.txt  lab1_part3.c  rgb_led.h
lab2/ece315_lab1/: ece315_lab1.xpr
lab2/ece315_lab1/ece315_lab1.cache/wt/: webtalk_pa.xml
lab2/ece315_lab1/ece315_lab1.gen/sources_1/bd/lab1_hw/sim/: lab1_hw.protoinst
lab2/ece315_lab1/ece315_lab1.hw/hw_1/: hw.xml
lab2/part1/: CMakeLists.txt  lab2_part1.c  sha256.c  sha256.h
lab2/part2/: CMakeLists.txt  lab2_part2.c
lab2/part3/: CMakeLists.txt  uart_driver.c
lab3/lab3_full/: archive_project_summary.txt  lab3_full.xpr  vivado.jou
lab3/lab3_full/lab3_full.cache/wt/: synthesis.wdf  webtalk_pa.xml
lab3/lab3_full/lab3_full.gen/sources_1/bd/lab3_hw/: lab3_hw.bda  lab3_hw.bmj  lab3_hw.bxml  lab3_hw_bmstub.v
lab3/lab3_full/lab3_full.gen/sources_1/bd/lab3_hw/hdl/: lab3_hw_wrapper.vhd
lab3/lab3_full/lab3_full.gen/sources_1/bd/lab3_hw/hw_handoff/: lab3_hw.hwh
lab3/lab3_full/lab3_full.gen/sources_1/bd/lab3_hw/sim/: lab3_hw.protoinst
lab3/lab3_full/lab3_full.gen/sources_1/bd/lab3_hw/synth/: lab3_hw.hwdef  lab3_hw.vhd
lab3/lab3_full/lab3_full.srcs/constrs_1/new/: pmod_oled_ja.xdc
lab3/lab3_full/lab3_full.srcs/sources_1/bd/lab3_hw/: lab3_hw.bd
lab3/lab3_full/lab3_full.srcs/sources_1/bd/lab3_hw/ui/: bd_961b7e68.ui
lab3/lab3_full/lab3_full.srcs/sources_1/imports/lab3/: archive_project_summary.txt
lab3/lab3_full/lab3_full.srcs/utils_1/imports/synth_1/: lab3_hw_wrapper.dcp
lab3/part1/: CMakeLists.txt  lab3_part1_student.c  my_spi.c  states.dot
lab3/part2/: CMakeLists.txt  main.c
lab3/pmod_oled_example/: CMakeLists.txt  main.c
lab4/lab4_hw/: archive_project_summary.txt  lab4_hw.xpr  vivado.jou
lab4/lab4_hw/lab4_hw.cache/wt/: synthesis.wdf  webtalk_pa.xml
lab4/lab4_hw/lab4_hw.gen/sources_1/bd/lab3_hw/: lab3_hw.bda  lab3_hw.bmj  lab3_hw.bxml  lab3_hw_bmstub.v
lab4/lab4_hw/lab4_hw.gen/sources_1/bd/lab3_hw/hdl/: lab3_hw_wrapper.vhd
lab4/lab4_hw/lab4_hw.gen/sources_1/bd/lab3_hw/hw_handoff/: lab3_hw.hwh
lab4/lab4_hw/lab4_hw.gen/sources_1/bd/lab3_hw/sim/: lab3_hw.protoinst  lab3_hw.vhd
lab4/lab4_hw/lab4_hw.gen/sources_1/bd/lab3_hw/synth/: lab3_hw.hwdef
lab4/lab4_hw/lab4_hw.srcs/constrs_1/new/: pmod_oled_ja.xdc
lab4/lab4_hw/lab4_hw.srcs/sources_1/bd/lab3_hw/: lab3_hw.bd
lab4/lab4_hw/lab4_hw.srcs/sources_1/bd/lab3_hw/ui/: bd_961b7e68.ui
lab4/lab4_hw/lab4_hw.srcs/utils_1/imports/synth_1/: lab3_hw_wrapper.dcp
lab4/part1/: CMakeLists.txt  lab4_part1.c
(+959 files in other folders)
